25 June 2008: Wouter
	- fixup fwd_ancil test typos.
	- Fix for newegg lameness : ok for qtype=A, but lame for others.
	- fixup unit test for infra cache, test lame merging.

24 June 2008: Wouter
	- removed testcode/checklocks from production code compilation path.
	- streamtcp can use UDP mode (connected UDP socket), for testing IPv6
	  on windows.
	- fwd_ancil test fails if platform support is lacking.

23 June 2008: Wouter
	- fixup minitpkg to cleanup on windows with its file locking troubles.
	- minitpkg shows skipped tests in report.
	- skip ipv6 tests on ipv4 only hosts (requires only ipv6 localhost not
	  ipv6 connectivity).
	- winsock event handler keeps track of sticky TCP events, that have
	  not been fully handled yet. when interest in the event(s) resumes,
	  they are sent again. When WOULDBLOCK is returned events are cleared.
	- skip tests that need signals when testing on mingw.

18 June 2008: Wouter
	- open testbound replay files in binary mode, because fseek/ftell
	  do not work in ascii-mode on windows. The b does nothing on unix.
	  unittest and testbound tests work on windows (xp too).
	- ioctlsocket prints nicer error message.
	- fixed up some TCP porting for winsock.
	- lack of IPv6 gives a warning, no fatal error.
	- use WSAGetLastError() on windows instead of errno for some errors.

17 June 2008: Wouter
	- outgoing num fds 32 by default on windows ; it supports less
	  fds for waiting on than unixes.
	- winsock_event minievent handler for windows. (you could also
	  attempt to link with libevent/libev ports for windows).
	- neater crypto check and gdi32 detection.
	- unbound.exe works to resolve and validate www.nlnetlabs.nl on vista.

16 June 2008: Wouter
	- on windows, use windows threads, mutex and thread-local-storage(Tls).
	- detect if openssl needs gdi32.
	- if no threading, THREADS_DISABLED is defined for use in the code.
	- sets USE_WINSOCK if using ws2_32 on windows.
	- wsa_strerror() function for more readable errors.