@@ -69,3 +69,8 @@ o command channel for couple of tasks. Like rndc.
   o add/del static preload data to change the domain redirections.
   o and maybe also start, stop, reload.
 
+
+o on windows version, libunbound uses a NamedPipe, examine security status
+  make sure the OS makes it safe like on unix.
+o on windows version, implement that OS ancillary data capabilities for
+  interface-automatic. IPPKTINFO, IP6PKTINFO for WSARecvMsg, WSASendMsg.
